--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -10,19 +10,24 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{% static "css/style.css" %}">
+
     
 </head>
 <body>
 
-   <section>
 
-    <div class="flex items-center justify-center  ">
+
+
+
+   <section >
+
+    <div class="flex items-center justify-center flex-wrap ">
         <ul class="flex gap-20 text-center font-bold text-black bg-white w-max mx-auto mt-2" >
-            <li>Proficient In Reading: <span class="text-[#9D2235]">36%</span></li>
-            <li>Distinguished In Reading: <span class="text-[#9D2235]">47%</span></li>
-            <li>Proficient In Math: <span class="text-[#9D2235]">29%</span></li>
-            <li>Distinguished In Math: <span class="text-[#9D2235]">44%</span></li>
-            <li>View Our <span ><a class="text-[#9D2235] underline" href = "https://www.kyschoolreportcard.com/organization/53230?year=2023">KDE Report Card</a></span></li>
+            <li class = "hover:scale-125 transition ease-in-out delay-100 cursor-pointer w-1/5	">Proficient In Reading: <span class="text-[#9D2235]">36%</span></li>
+            <li class = "hover:scale-125 transition ease-in-out delay-100 cursor-pointer	w-1/5">Distinguished In Reading: <span class="text-[#9D2235]">47%</span></li>
+            <li class = "hover:scale-125 transition ease-in-out delay-100 cursor-pointer	w-1/5">Proficient In Math: <span class="text-[#9D2235]">29%</span></li>
+            <li class = "hover:scale-125 transition ease-in-out delay-100 cursor-pointer	w-1/5">Distinguished In Math: <span class="text-[#9D2235]">44%</span></li>
+            <li class = "hover:scale-125 transition ease-in-out delay-100 cursor-pointer	w-1/5">View Our <span ><a class="hover:font-extrabold  text-[#9D2235] underline" href = "https://www.kyschoolreportcard.com/organization/53230?year=2023">KDE Report Card</a></span></li>
         </ul>
     </div>
     
@@ -53,9 +58,9 @@
                     <li><a>Item 3</a></li>
                 </ul>
             </div>
-            <img class=" ml-10 w-28 h-28" src="{% static 'images/manuallogo.png' %}" alt="">
+            <img class=" xl:ml-10 lg:ml-0 w-28 h-28" src="{% static 'images/manuallogo.png' %}" alt="">
         </div>
-        <div class="navbar-center hidden lg:flex">
+        <div class="navbar-center hidden  lg:flex">
             <ul class="menu menu-horizontal px-1">
                 <li class="menu menu-horizontal px-1 space-x-9">
                     <details>
@@ -161,13 +166,13 @@
 ready for another year of being indoctirnated by the matrix and getting referalls!
             </p>
             <div class="mt-5 sm:flex md:mt-8">
-                <div class="rounded-md"><a href=""
-                        class="flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-white transition duration-150 ease-in-out bg-[#9D2235] border border-transparent rounded-full focus:outline-none focus:shadow-outline-blue md:py-4 md:text-lg md:px-10">
+                <div class="rounded-md hover:scale-125 transition ease-in-out delay-100  "><a href=""
+                        class=" flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-white transition duration-150 ease-in-out bg-[#9D2235] hover:font-bold  border border-transparent rounded-full focus:outline-none focus:shadow-outline-blue md:py-4 md:text-lg md:px-10">
                         About Us
                     </a></div>
-                <div class="mt-3 rounded-md sm:mt-0 sm:ml-3">
+                <div class="hover:scale-125 transition ease-in-out delay-100 mt-3 rounded-md sm:mt-0 sm:ml-3">
                     <a href=""
-                        class="flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-black transition duration-150 ease-in-out bg-white border border-black rounded-full hover:text-[#9D2235] hover:border-[#9D2235] focus:outline-none focus:shadow-outline-blue md:py-4 md:text-lg md:px-10">
+                        class="hover:font-bold flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-black transition duration-150 ease-in-out bg-white border border-black rounded-full hover:text-[#9D2235] hover:border-[#9D2235] focus:outline-none focus:shadow-outline-blue md:py-4 md:text-lg md:px-10">
                         Contact Us
                     </a>
                 </div>
@@ -176,16 +181,16 @@ ready for another year of being indoctirnated by the matrix and getting referall
     </div>
     <div class="flex items-center py-5 md:w-1/2 md:pb-20 md:pt-10 md:pl-10">
         <div class="relative w-full p-3 rounded  md:p-8">
-<div class="relative w-full h-96 bg-cover bg-center rounded-xl" style="background-image: url('{% static "./images/graduatingClass.png" %}');">
+<div class="relative w-full h-[500px] bg-cover bg-center rounded-xl" style="background-image: url('{% static "./images/graduatingClass.png" %}');">
     <!-- Red Box and Text Content -->
     <div class="absolute bottom-0 left-0 bg-[#9D2235] text-white p-6 rounded-tr-lg w-64">
-        <p class="text-sm mb-2">May 8th</p>
-        <h1 class="text-xl font-bold mb-4">Senior Picture Day</h1>
+        <p class="text-lg mb-2">May 8th</p>
+        <h1 class="text-2xl font-bold mb-4">Senior Picture Day</h1>
 
 
-        <div class = "flex flex-direction-col">
-        <a href="#" class="text-white">Discover Event</a>
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white"
+        <div class = "flex flex-direction-col items-center hover:underline transition ease-in-out hover:animate-pulse ">
+        <a href="#" class="text-white text-xl ">Discover Event</a>
+        <svg class = "ml-2 " xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white"
             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <circle cx="12" cy="12" r="10" />
             <path d="M12 8l4 4-4 4M8 12h7" />
@@ -205,7 +210,7 @@ ready for another year of being indoctirnated by the matrix and getting referall
 
 {% comment %} Contact information section {% endcomment %}
 
-<div class="border border-[#D0D0DB] shadow-xl rounded-box flex w-5/6 mx-auto" style="box-sizing: border-box; ">
+<div class="border border-[#D0D0DB] shadow-xl rounded-box flex xl:w-5/6 lg:w-full mx-auto" style="box-sizing: border-box; ">
     <!-- First Section: Call Us -->
     <div class="w-1/3 p-5 flex flex-row justify-start card place-items-center box-border">
         <img class="max-w-[80px]" src="{% static './images/phone.svg' %}" alt="">
@@ -373,19 +378,20 @@ ready for another year of being indoctirnated by the matrix and getting referall
             <button class = "m-auto text-center p-5 pt-3 pb-3 flex  font-bold border border-4 border-[#9D2235] text-xl justify-center">View All News <span> <img class = "ml-3 w-[30px]" src = "{% static './images/rightarrow.svg' %}"> </span></button>
         </div> 
 
-        <div class = "news--main flex w-full flex-row lg:flex-row sm:flex-col" > 
+        <div class="news--main xl:flex xl:w-full xl:flex-row lg:justify-center lg:items-center sm:flex-col"
+        > 
 
 
            {% comment %} START NEWS LEFT {% endcomment %}
-            <div class="news--left ml-[5%] w-1/2 card  rounded-box grid flex-grow place-items-left flex-col" >
+            <div class="news--left ml-[5%] xl:w-1/2 lg:w-5/6 card  rounded-box grid  place-items-left xl:flex xl:flex-col lg:flex lg:mt-10 lg:flex-row" >
 
-                <div class = "w-[500px]" style = "background-color: #9D2235"> 
+                <div class = "xl:w-[500px]  lg:w-[400px] lg:h-[300px] xl:h-[370px]" style = "background-color: #9D2235"> 
 
-                    <img class = "p-3 w-[500px]  " src = "{% static './images/tejaswinandanthony.png' %}"> 
+                    <img class = "p-3 xl:w-[500px] lg:w-[400px] " src = "{% static './images/tejaswinandanthony.png' %}"> 
 
                 </div>
 
-                <div class = "w-[80%] mt-3">
+                <div class = "xl:w-[80%] lg:w-1/2 mt-3 xl:ml-0 lg:ml-10">
                     <p class = "font-source-sans text-[#990000] text-xl font-bold uppercase  tracking-wide">Math, Science, Technology (MST)</p>
                                             
                     <h1 class = "font-noto-serif text-3xl tracking-wide mt-2">Tejaswin Gontla and Anthony Northinghan dating? Here’s the latest scoop. </h1>
@@ -399,48 +405,51 @@ ready for another year of being indoctirnated by the matrix and getting referall
             {% comment %} END NEWS LEFT {% endcomment %}
 
 
-            <div class="divider lg:divider-horizontal mx-10"> </div>
+            <div class="divider lg:divider-horizontal mx-30"> </div>
             
             {% comment %} START NEWS RIGHT {% endcomment %}
-            <div class="news--right w-[60%] card  rounded-box  flex-grow place-items-right mr-[3%]">
+            <div class="news--right  xl:w-[60%] lg:w-5/6 card  rounded-box  flex-grow place-items-right lg:mr-0 xl:mr-[3%]">
 
-                <div class = "news--right--element flex flex-row  " > 
+                <div class = "news--right--element xl:ml-0 lg:ml-[5%] flex flex-row xl:items-start lg:items-center " > 
                         
                     <div class="flex flex-col h-[300px]" style="background-color: #9D2235">
-                        <img class="p-2 w-[500px] h-[300px]" src="{% static './images/tejaswinandanthony.png' %}">
+                        <img class="p-2 xl:w-[500px] lg:w-[400px] h-[300px]" src="{% static './images/tejaswinandanthony.png' %}">
                     </div>
                     
                         
-                    <div class = "flex flex-col w-3/4 ml-[20px]">
-                        <p class = "font-source-sans text-[#990000] text-md font-bold uppercase  tracking-wide">Math, Science, Technology (MST)</p>
+                    <div class = "flex flex-col xl:w-3/4 lg:w-1/2 xl:ml-[20px] lg:ml-10">
+                        <p class = "font-source-sans text-[#990000] xl:text-md lg:text-xl font-bold uppercase  tracking-wide">Math, Science, Technology (MST)</p>
                     
-                        <h1 class = "font-noto-serif text-2xl tracking-wide mt-2">Tejaswin Gontla and Anthony Northinghan dating? Here’s the latest scoop. </h1>
+                        <h1 class = "font-noto-serif xl:text-2xl lg:text-3xl tracking-wide mt-2">Tejaswin Gontla and Anthony Northinghan dating? Here’s the latest scoop. </h1>
          
-                        <p class = "tracking-wide text-md mt-3">Dupont Manual High School is investigating a developing story where Anthony Northinghan stole Deeya’s ex-boyfriend, who had suddenly become a “gay pook”. </p>
+                        <p class = "tracking-wide xl:text-md lg:text-lg mt-3">Dupont Manual High School is investigating a developing story where Anthony Northinghan stole Deeya’s ex-boyfriend, who had suddenly become a “gay pook”. </p>
                              
-                        <p class = "font-source-sans text-sm uppercase text-[#990000] font-bold mt-2">September 16, 2024</p>
+                        <p class = "font-source-sans xl:text-sm lg:text-md uppercase text-[#990000] font-bold mt-2">September 16, 2024</p>
                     </div>
 
                 </div>
 
-                <div class = "news--right--element flex flex-row mt-[50px]  " > 
+
+
+                <div class = "news--right--element xl:ml-0 xl:mt-10 lg:ml-[5%] lg:mt-10 flex flex-row xl:items-start lg:items-center " > 
                         
                     <div class="flex flex-col h-[300px]" style="background-color: #9D2235">
-                        <img class="p-2 w-[500px] h-[300px]" src="{% static './images/tejaswinandanthony.png' %}">
+                        <img class="p-2 xl:w-[500px] lg:w-[400px] h-[300px]" src="{% static './images/tejaswinandanthony.png' %}">
                     </div>
                     
                         
-                    <div class = "flex flex-col w-3/4 ml-[20px]">
-                        <p class = "font-source-sans text-[#990000] text-md font-bold uppercase  tracking-wide">Math, Science, Technology (MST)</p>
+                    <div class = "flex flex-col xl:w-3/4 lg:w-1/2 xl:ml-[20px] lg:ml-10">
+                        <p class = "font-source-sans text-[#990000] xl:text-md lg:text-xl font-bold uppercase  tracking-wide">Math, Science, Technology (MST)</p>
                     
-                        <h1 class = "font-noto-serif text-2xl tracking-wide mt-2">Tejaswin Gontla and Anthony Northinghan dating? Here’s the latest scoop. </h1>
+                        <h1 class = "font-noto-serif xl:text-2xl lg:text-3xl tracking-wide mt-2">Tejaswin Gontla and Anthony Northinghan dating? Here’s the latest scoop. </h1>
          
-                        <p class = "tracking-wide text-md mt-3">Dupont Manual High School is investigating a developing story where Anthony Northinghan stole Deeya’s ex-boyfriend, who had suddenly become a “gay pook”. </p>
+                        <p class = "tracking-wide xl:text-md lg:text-lg mt-3">Dupont Manual High School is investigating a developing story where Anthony Northinghan stole Deeya’s ex-boyfriend, who had suddenly become a “gay pook”. </p>
                              
-                        <p class = "font-source-sans text-sm uppercase text-[#990000] font-bold mt-2">September 16, 2024</p>
+                        <p class = "font-source-sans xl:text-sm lg:text-md uppercase text-[#990000] font-bold mt-2">September 16, 2024</p>
                     </div>
 
                 </div>
+                
 
                 
 
@@ -509,7 +518,7 @@ ready for another year of being indoctirnated by the matrix and getting referall
     <section id="diversity" style="background: linear-gradient(to right, #F9F9F9, #F0EFEF); max-height: 500px" >
         <div class="w-full h-full flex flex-row">
             <div class="w-1/2 flex items-center justify-center flex-col">
-                <div class="w-[60%] flex flex-col ">
+                <div class="xl:w-[70%] lg:w-[85%] flex flex-col ">
                     <h1 class="text-left text-5xl pb-3 font-bold border-[#9D2235] border-b border-b-4">
                         Diversity & <span class="text-[#9D2235] font-bolder italic">Inclusion</span>
                     </h1>
