sm screensize done, all that remains is mobile

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -644,8 +644,8 @@ ready for another year of being indoctirnated by the matrix and getting referall
     <section class = "" style = "background-color: #9D2235; "> 
 
        {% comment %} TOP SECTION {% endcomment %}
-        <div class="w-full flex justify-between p-20 md:p-10">
-            <div class="lg:w-2/6 md:w-1/2 text-left  p-4 rounded flex flex-col">
+        <div class="w-full flex justify-between p-5 md:p-10">
+            <div class="lg:w-2/6 md:w-1/2 text-left w-1/2 p-4 rounded flex flex-col">
                 <img src = "{% static './images/manuallogo.png' %}" style = "width: 100px; height: 100px"> 
                 <h1 class = "text-5xl mt-3 font-bold mb-2  text-white  ">About Our School</h1> 
 
@@ -657,7 +657,7 @@ ready for another year of being indoctirnated by the matrix and getting referall
                 </div>
             </div>
 
-            <div class="lg:w-3/6 md:w-4/6  p-4 rounded flex flex-col text-left">
+            <div class="lg:w-3/6 md:w-4/6  w-4/6 p-4 rounded flex flex-col text-left">
                 <p class = "text-[#D8E3FB] text-2xl">We are the best high school in Kentucky. This is some text here.  This is some text here.  This is some text here.  This is some text here.  This is some text here.  This is some text here.  This is some text here.  </p>
                 <p class = "font-bold text-xl text-white mt-10">Founded in 1889. This is some text about our history. This is some text about our history. This is some text about our history. This is some text about our history. This is some text about our history. This is some text about our history. This is some text about our history. </p>
 
@@ -677,12 +677,12 @@ ready for another year of being indoctirnated by the matrix and getting referall
                 <img src="{% static './images/bottommatrix.png' %}" class="w-full">
         
                 <div class="absolute inset-0 bg-black/50 flex flex-col justify-center items-center">
-                    <img class = "text-white w-40 h-40" src = "{% static './images/playbutton2.svg' %}">
+                    <img class = "text-white md:w-40 md:h-40 h-28 w-28" src = "{% static './images/playbutton2.svg' %}">
 
                     {% comment %} text section {% endcomment %}
                     <div class = "w-1/2 text-center"> 
-                    <p class="text-white lg:text-5xl md:text-4xl font-bold">Video Tour Of Manual</p>
-                    <p class = "mt-5 lg:text-xl md:text-lg font-noto-serif text-white font-bold ">Take a tour of Dupont Manual and learn why we are the best high school in the entire state of Kentucky. This here is dummy text.</p>
+                    <p class="text-white lg:text-5xl text-3xl md:text-4xl font-bold">Video Tour Of Manual</p>
+                    <p class = "mt-5 lg:text-xl text-md md:text-lg font-noto-serif text-white font-bold ">Take a tour of Dupont Manual and learn why we are the best high school in the entire state of Kentucky. This here is dummy text.</p>
 
                     </div> 
 
@@ -691,7 +691,7 @@ ready for another year of being indoctirnated by the matrix and getting referall
         </div>
     </section>
 
-    <footer class="footer bg-[#9D2235] text-base-content p-10">
+    <footer class="footer bg-[#9D2235] text-base-content p-10 ">
         <aside>
           <img style = "width: 100px; height: 100px" src = "{% static 'images/manuallogo.png' %}">
           <p class = "font-bold text-lg text-white">
@@ -700,21 +700,21 @@ ready for another year of being indoctirnated by the matrix and getting referall
             120 W Lee St, Louisville, KY 40208
           </p>
         </aside>
-        <nav>
+        <nav class = "mx-auto md:mx-0">
           <h6 class="footer-title text-white opacity-100 text-xl tracking-wider" >About</h6>
           <a class="link link-hover text-white text-lg">Mission & Vision</a>
           <a class="link link-hover text-white text-lg">School History</a>
           <a class="link link-hover text-white text-lg">School Policies</a>
           <a class="link link-hover text-white text-lg">Athletics</a>
         </nav>
-        <nav>
+        <nav class = "mx-auto md:mx-0">
             <h6 class="footer-title text-white opacity-100 text-xl tracking-wider" >Admissions</h6>
             <a class="link link-hover text-white text-lg">Admissions Process</a>
           <a class="link link-hover text-white text-lg text-white text-lg">Admissions Requirements</a>
           <a class="link link-hover link link-hover text-white text-lg">Open House</a>
           <a class="link link-hover text-white text-lg">Events</a>
         </nav>
-        <nav>
+        <nav class = "mx-auto md:mx-0">
             <h6 class="footer-title text-white opacity-100 text-xl tracking-wider" >Student Resources</h6>
             <a class="link link-hover text-white text-lg">General Info</a>
           <a class="link link-hover link link-hover text-white text-lg">Infinite Campus</a>
