--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -153,7 +153,7 @@
     <div class="flex items-center py-5 md:w-full lg:w-1/2  md:pt-10 md:pr-10">
         <div class="text-center lg:text-left">
             <p class="text-[#9D2235] max-w-md mx-auto mt-3 text-base text-lg md:mt-5 md:text-xl md:max-w-3xl text-center lg:text-left">
-                 Dupont Manual High School
+                 duPont Manual High School
             </p>
             <h2
                 class=" text-black text-6xl leading-10 tracking-tight  md:text-7xl">The
@@ -643,6 +643,192 @@ ready for another year of being indoctirnated by the matrix and getting referall
 
     </section>
 
+{% comment %} Student Resources Section {% endcomment %}
+    <section class = "my-10 "> 
+
+        <div  class = " w-5/6 md:w-full md:px-5 flex flex-center flex-col" style = "margin: 20px auto; "> 
+            <h1 class = "m-auto md:w-2/3 text-center text-6xl pb-3 font-bold border-[#9D2235] border-b border-b-4">Student <span class = "text-[#9D2235] font-bolder italic " >Resources</span></h1>
+            <p class = " mt-5  md:w-3/6 md:text-center md:mx-auto  text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">Dupont Manual High School offers a plethora of student resources. This is some dummy text here. This is some dummy text here. </p>
+            <button class = "m-auto text-center p-5 pt-3 pb-3 flex  font-bold border border-4 border-[#9D2235] text-xl justify-center">Learn More <span> <img class = "ml-3 w-[30px]" src = "{% static './images/rightarrow.svg' %}"> </span></button>
+        </div> 
+
+        {% comment %} MAIN CONTAINER {% endcomment %}
+
+
+        <div class="carousel flex flex-row w-full">
+            <div id="slide1" class="carousel-item relative w-full transition-transform duration-700 ease-in-out transform">
+
+                <div class="card bg-[#F8F4F1] w-1/3 p-5 ml-20 shadow-xl h-[50vh] mx-10">
+
+                    <figure class = "flex !justify-start w-[80px] h-[80px] ">
+                      <img
+                        src="{% static './images/library.svg' %}"
+                        alt="Library"  class = "w-[80px] h-[80px]" />
+                    </figure>
+        
+        
+                    <div class="card-body flex flex-col justify-start">
+                      <h2 class="card-title font-bold text-4xl  ">Library</h2>
+                      <p class = "text-xl">Come visit Mrs. Causey today!</p>
+                      <div class="card-actions justify-start">
+                            <button
+                        class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
+                        Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
+                    </button>
+                      </div>
+                    </div>
+                </div>
+
+                <div class="card bg-[#F8F4F1] w-1/3 p-5 shadow-xl h-[50vh] mx-10">
+
+                    <figure class = "flex !justify-start w-[80px] h-[80px] ">
+                      <img
+                        src="{% static './images/basketball.svg' %}"
+                        alt="Shoes"  class = "w-[80px] h-[80px]" />
+                    </figure>
+        
+        
+                    <div class="card-body flex flex-col justify-start">
+                      <h2 class="card-title font-bold text-4xl ">Athletics</h2>
+                      <p class = "text-xl">Nationally acclaimed sports teams!</p>
+                      <div class="card-actions justify-start">
+                            <button
+                        class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
+                        Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
+                    </button>
+                      </div>
+                    </div>
+                </div>
+
+
+                <div class="card bg-[#F8F4F1] w-1/3 p-5 shadow-xl h-[50vh] mx-10">
+
+                    <figure class = "flex !justify-start w-[80px] h-[80px] ">
+                      <img
+                        src="{% static './images/counseling.svg' %}"
+                        alt="Shoes"  class = "w-[80px] h-[80px]" />
+                    </figure>
+        
+        
+                    <div class="card-body flex flex-col justify-start">
+                      <h2 class="card-title font-bold text-4xl ">Counseling</h2>
+                      <p class = "text-xl">Support, Mental Health, & More!</p>
+                      <div class="card-actions justify-start">
+                            <button
+                        class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
+                        Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
+                    </button>
+                      </div>
+                    </div>
+                </div>
+
+                
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a  onclick="slideTo(2)" class="btn btn-circle">❮</a>
+                <a onclick="slideTo(2)" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full transition-transform duration-700 ease-in-out transform">
+
+                <div class="card bg-[#F8F4F1] w-1/3 p-5 ml-20 shadow-xl h-[50vh] mx-10">
+
+                    <figure class = "flex !justify-start w-[80px] h-[80px] ">
+                      <img
+                        src="{% static './images/infinitecampus.svg' %}"
+                        alt="Library"  class = "w-[80px] h-[80px]" />
+                    </figure>
+        
+        
+                    <div class="card-body flex flex-col justify-start">
+                      <h2 class="card-title font-bold text-4xl  ">Infinite Campus</h2>
+                      <p class = "text-xl">View grades, records, & more!</p>
+                      <div class="card-actions justify-start">
+                            <button
+                        class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
+                        Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
+                    </button>
+                      </div>
+                    </div>
+                </div>
+
+
+
+
+                <div class="card bg-[#F8F4F1] w-1/3 p-5 ml-20 shadow-xl h-[50vh] mx-10">
+
+                    <figure class = "flex !justify-start w-[80px] h-[80px] ">
+                      <img
+                        src="{% static './images/ptsa.svg' %}"
+                        alt="Library"  class = "w-[80px] h-[80px]" />
+                    </figure>
+        
+        
+                    <div class="card-body flex flex-col justify-start">
+                      <h2 class="card-title font-bold text-4xl  ">PTSA</h2>
+                      <p class = "text-xl">Check out our vibrant parent & teacher body!</p>
+                      <div class="card-actions justify-start">
+                            <button
+                        class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
+                        Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
+                    </button>
+                      </div>
+                    </div>
+                </div>
+
+
+
+
+                <div class="card bg-[#F8F4F1] w-1/3 p-5 ml-20 shadow-xl h-[50vh] mx-10">
+
+                    <figure class = "flex !justify-start w-[80px] h-[90px] ">
+                      <img
+                        src="{% static './images/organization.svg' %}"
+                        alt="Library"  class = "w-[80px] h-[80px]" />
+                    </figure>
+        
+        
+                    <div class="card-body flex flex-col justify-start">
+                      <h2 class="card-title font-bold text-4xl  ">JCPS</h2>
+                      <p class = "text-xl">Access general resources & more!</p>
+                      <div class="card-actions justify-start">
+                            <button
+                        class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
+                        Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
+                    </button>
+                      </div>
+                    </div>
+                </div>
+
+
+
+
+
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a  onclick="slideTo(1)" class="btn btn-circle">❮</a>
+                <a onclick="slideTo(1)" class="btn btn-circle">❯</a>
+              </div>
+
+            </div>
+            
+    
+          </div>
+
+
+          
+
+        
+
+
+
+
+
+        
+
+
+        </div> 
+
+    </section> 
+
 
     <section class = "" style = "background-color: #9D2235; "> 
 
@@ -729,7 +915,15 @@ ready for another year of being indoctirnated by the matrix and getting referall
 
 
     
-   
+      <script>
+        function slideTo(slideNumber) {
+            const slides = document.querySelectorAll('.carousel-item');
+            slides.forEach((slide, index) => {
+                slide.style.transform = `translateX(${-(slideNumber - 1) * 100}%)`;
+            });
+        }
+    </script>
+    
 
     
 </body>
