--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -20,16 +20,19 @@
 
 
    <section >
-
-    <div class="flex items-center flex-col justify-center w-full  ">
-        <ul class="flex  gap-5  text-center font-bold text-black bg-white w-full mx-auto mt-2" >
-            <li class = "flex flex-row text-sm md:ml-10  hover:scale-125 transition ease-in-out delay-100 cursor-pointer w-1/4	"> <p class = "md:whitespace-nowrap whitespace-wrap">Proficient In Reading: <span class="text-[#9D2235]"> 36%</span></p> </li>
-            <li class = " flex flex-row text-sm hover:scale-125 transition ease-in-out delay-100 cursor-pointer	w-1/4"><p class = "md:whitespace-nowrap whitespace-wrap">Distinguished In Reading: <span class="text-[#9D2235]"> 36%</span></p></li>
-            <li class = "flex flex-row text-sm hover:scale-125 transition ease-in-out delay-100 cursor-pointer	w-1/4"><p class = "md:whitespace-nowrap whitespace-wrap">Proficient In Math: <span class="text-[#9D2235]"> 36%</span></p></li>
-            <li class = "flex flex-row text-sm hover:scale-125 transition ease-in-out delay-100 cursor-pointer	w-1/4"><p class = "md:whitespace-nowrap whitespace-wrap">Distinguished In Math: <span class="text-[#9D2235]"> 36%</span></p></li>
-           
-        </ul>
-    </div>
+<div class="bg-white text-black padding text-center font-bold flex flex-col sm:flex-row justify-center space-y-2 sm:space-y-0 sm:space-x-4" style="padding-top: 10px;">
+    <span>Proficient in Reading: <strong>31%</strong></span>
+    <span class="hidden sm:inline">|</span>
+    <span>Distinguished in Reading: <strong>53%</strong></span>
+    <span class="hidden sm:inline">|</span>
+    <span>Proficient in Math: <strong>29%</strong></span>
+    <span class="hidden sm:inline">|</span>
+    <span>Distinguished in Math: <strong>45%</strong></span>
+    <span class="hidden sm:inline">|</span>
+<a href="https://www.kyschoolreportcard.com/organization/53230?year=2023" target="_blank" class="underline">KDE REPORT CARD for duPont Manual High</a>
+</div>
+</div>
+    
     
 
     <div class=" mt-3 navbar bg-[#9D2235]">
@@ -105,7 +108,7 @@
                         <summary class="text-white text-lg text-transform: uppercase tracking-widest">Contact</summary>
                         <ul class="z-50 p-2 text-black text-lg">
                             <li><a>Contact Information</a></li>
-                            <li><a>School Directory</a></li>
+                            <li><a>Staff Contact</a></li>
                             <li><a>Map & Directions</a></li>
                             <li><a>Attendance Office</a></li>
                         </ul>
