--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -592,7 +592,7 @@
 
         <div  data-aos="zoom-in-up" data-aos-duration = "2000" class = " w-5/6 md:w-full md:px-5 flex flex-center flex-col" style = "margin: 20px auto; "> 
             <h1 class = "m-auto md:w-2/3 text-center text-6xl pb-3 font-bold border-[#9D2235] border-b border-b-4">Programs For <span class = "text-[#9D2235] font-bolder italic " >Every Student</span></h1>
-            <p class = " mt-5  md:w-2/3 md:text-center md:mx-auto  text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">Dupont Manual High School offers a plethora of magnet programs that cater to diverse student interests and talents. Regardless if you like math or painting, Manual has a program for you!  </p>
+            <p class = " mt-5  md:w-2/3 md:text-center md:mx-auto  text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">duPont Manual High School offers a plethora of magnet programs that cater to diverse student interests and talents. Regardless if you like math or painting, Manual has a program for you!  </p>
             <button class = "red-arrow-box m-auto text-center p-5 pt-3 pb-3 flex  font-bold border border-4 border-[#9D2235] text-xl justify-center">Learn More <span> <img class = "ml-3 w-[30px]" src = "{% static './images/rightarrow.svg' %}"> </span></button>
         </div> 
 
@@ -703,7 +703,7 @@
 
         <div data-aos="zoom-in-up" data-aos-duration = "2000"  class = " w-5/6 md:w-full md:px-5 flex flex-center flex-col" style = "margin: 20px auto; "> 
             <h1 class = "m-auto md:w-2/3 text-center text-6xl pb-3 font-bold border-[#9D2235] border-b border-b-4">Student <span class = "text-[#9D2235] font-bolder italic " >Resources</span></h1>
-            <p class = " mt-5  md:w-3/6 md:text-center md:mx-auto  text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">Dupont Manual High School provides students with a wide range of resources to help them thrive academically, socially, and emotionally.</p>
+            <p class = " mt-5  md:w-3/6 md:text-center md:mx-auto  text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">duPont Manual High School provides students with a wide range of resources to help them thrive academically, socially, and emotionally.</p>
             <button class = " red-arrow-box m-auto text-center p-5 pt-3 pb-3 flex  font-bold border border-4 border-[#9D2235] text-xl justify-center">Learn More <span> <img class = "ml-3 w-[30px]" src = "{% static './images/rightarrow.svg' %}"> </span></button>
         </div> 
 
@@ -942,7 +942,7 @@
 
         <div data-aos="zoom-in-up" data-aos-duration = "2000"  class = " w-5/6 md:w-full md:px-5 flex flex-center flex-col" style = "margin: 20px auto; "> 
             <h1 class = "m-auto md:w-2/3 text-center text-6xl pb-3 font-bold border-[#9D2235] border-b border-b-4">Student <span class = "text-[#9D2235] font-bolder italic " >Activities</span></h1>
-            <p class = " mt-5  md:w-3/6 md:text-center md:mx-auto  text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">From clubs to sports, Dupont Manual offers countless activities to enrich student life and foster community."            </p>
+            <p class = " mt-5  md:w-3/6 md:text-center md:mx-auto  text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">From clubs to sports, duPont Manual offers countless activities to enrich student life and foster community."            </p>
             <button class = " red-arrow-box m-auto text-center p-5 pt-3 pb-3 flex  font-bold border border-4 border-[#9D2235] text-xl justify-center">Learn More <span> <img class = "ml-3 w-[30px]" src = "{% static './images/rightarrow.svg' %}"> </span></button>
         </div> 
 
@@ -953,7 +953,7 @@
             <div   class="grid gap-4 " >
 
                 <div data-aos="fade-in" data-aos-duration = "2000" class = "aos-hover cursor-pointer">
-                    <img class="h-full max-w-full rounded-lg" src="{% static "./images/sportsoccergirl.JPG" %}" alt="">
+                    <img class="h-full max-w-full rounded-lg" src="{% static "./images/tejaswinbloodygontla.png" %}" alt="">
                 </div>
 
                 <div  data-aos="fade-in" data-aos-duration = "2000" class = "aos-hover cursor-pointer">
@@ -995,7 +995,7 @@
                 </div>
 
                 <div data-aos="fade-in" data-aos-duration = "2000" class = "aos-hover cursor-pointer">
-                    <img class="h-auto max-w-full rounded-lg" src="{% static "./images/basketball1.JPG" %}" alt="">
+                    <img class="h-auto max-w-full rounded-lg" src="{% static "./images/aryanmf.png" %}" alt="">
                 </div>
 
             </div>
@@ -1049,7 +1049,7 @@
                 <p class = "text-[#D8E3FB] text-2xl">We are proud to be the best high school in Kentucky, consistently ranked #1 for academic excellence and innovation. Our students excel in rigorous coursework, cutting-edge technology, and extracurricular activities, preparing them for top universities and careers. With diverse magnet programs and dedicated faculty, we offer an enriching environment where every student can explore their passions and achieve their full potential.
 
                 </p>
-                <p class = "font-bold text-xl text-white mt-10">Founded in 1889, Dupont Manual High School has a long-standing tradition of excellence in education. Originally established as a manual training school, we have evolved to become a hub of academic, artistic, and technological achievement. Over the decades, we’ve nurtured generations of leaders, thinkers, and innovators, adapting to the changing world while honoring our historic roots.                </p>
+                <p class = "font-bold text-xl text-white mt-10">Founded in 1889, duPont Manual High School has a long-standing tradition of excellence in education. Originally established as a manual training school, we have evolved to become a hub of academic, artistic, and technological achievement. Over the decades, we’ve nurtured generations of leaders, thinkers, and innovators, adapting to the changing world while honoring our historic roots.                </p>
 
             </div>
         </div>
@@ -1073,7 +1073,7 @@
                     {% comment %} text section {% endcomment %}
                     <div class = "sm:w-1/2 w-full text-center "> 
                     <p class="text-white lg:text-5xl sm:text-3xl text-xl md:text-4xl font-bold">Video Tour Of Manual</p>
-                    <p class = "sm:mt-5 mt-3 lg:text-xl text-sm sm:text-md md:text-lg font-noto-serif text-white font-bold ">Take a tour of Dupont Manual and learn what makes us the #1 high school in all of Kentucky!</p>
+                    <p class = "sm:mt-5 mt-3 lg:text-xl text-sm sm:text-md md:text-lg font-noto-serif text-white font-bold ">Take a tour of duPont Manual and learn what makes us the #1 high school in all of Kentucky!</p>
 
                     </div> 
 
@@ -1083,10 +1083,10 @@
     </section>
 
     <footer class="footer bg-[#9D2235] text-base-content p-10 ">
-        <aside>
+        <aside>             
           <img style = "width: 100px; height: 100px" src = "{% static 'images/manuallogo.png' %}">
           <p class = "font-bold text-lg text-white">
-            DuPont Manual High School
+            duPont Manual High School
             <br />
             120 W Lee St, Louisville, KY 40208
           </p>
